--- a/src/SpotifyEmbed.css
+++ b/src/SpotifyEmbed.css
@@ -8,7 +8,6 @@ iframe{
     border-top-left-radius: 20%;
     border-top-right-radius: 20%;
     background-color: hsl(0, 0%, 35%);
-    opacity: 100%;
     display: block;
     margin-left: 270px;
     color: hsla(0, 0%, 99%, 1);
